Bump org.wiremock:wiremock from 3.5.2 to 3.5.4
See merge request search-guard/search-guard-suite-enterprise!812