@@ -391,7 +391,7 @@
       <dependency>
         <groupId>org.wiremock</groupId>
         <artifactId>wiremock</artifactId>
-        <version>3.5.2</version>
+        <version>3.5.4</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -735,7 +735,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
           <configuration>
-            <argLine>-Xmx3072m</argLine>
+            <!-- java.xml/jdk.xml.internal=ALL-UNNAMED required after wiremock bump to 3.5.4-->
+            <argLine>-Xmx3072m --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
             <rerunFailingTestsCount>3</rerunFailingTestsCount>
             <forkCount>3</forkCount>
             <reuseForks>true</reuseForks>
